--- a/src/style.css
+++ b/src/style.css
@@ -6,12 +6,13 @@ body {
 }
 
 .container {
-  border: 4px double black;
-  height: 630px;
+  /* border: 4px double black;
+  height: 630px; */
 }
 .div1 {
-  margin: auto;
-  padding-left: 550px;
+  /* margin: auto;
+  padding-left: 550px; */
+  text-align: center;
 }
 .table {
   margin: auto;
@@ -24,8 +25,8 @@ body {
 
 .pianoimg {
   width: 80%;
-  margin: auto;
-  margin-left: 140px;
+  /* margin: auto; */
+  margin-left: 130px;
   margin-top: 20px;
   width: 80%;
   height: 200px;
@@ -45,7 +46,7 @@ body {
   margin-bottom: 0%;
 }
 .sp {
-  margin-top: -2%;
+  margin-top: -1%;
   font-weight: 150;
   font-size: 35px;
 }
@@ -53,7 +54,7 @@ body {
   font-size: 30px;
   margin-bottom: -1%;
   font-weight: 100;
-  padding-left: 80px;
+  padding-left: 10px;
 }
 .name {
   padding-left: 1000px;
@@ -87,11 +88,11 @@ a {
 .main {
   display: flex;
 }
-.p3{
+.p3 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 25px;
 }
-.contact{
+.contact {
   text-align: center;
   background-color: black;
   color: white;
@@ -99,6 +100,6 @@ a {
   font-size: 40px;
   margin-top: 70px;
 }
-.Details{
-  font-family: Georgia, 'Times New Roman', Times, serif;
+.Details {
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
